--- a/jit/tests/basic-usage.test.html
+++ b/jit/tests/basic-usage.test.html
@@ -88,6 +88,7 @@
     <div class="object-cover"></div>
     <div class="object-bottom"></div>
     <div class="opacity-90"></div>
+    <div class="mix-multiply mix-saturation"></div>
     <div class="order-last order-2"></div>
     <div class="outline-none outline-black"></div>
     <div class="overflow-hidden"></div>
