--- a/jit/tests/basic-usage.test.html
+++ b/jit/tests/basic-usage.test.html
@@ -108,6 +108,9 @@
     <div class="ring-offset-2"></div>
     <div class="ring-opacity-40"></div>
     <div class="ring ring-4"></div>
+    <div
+      class="filter filter-none blur-1 brightness-150 contrast-50 drop-shadow-md grayscale hue-rotate-60 invert saturate-200 sepia"
+    ></div>
     <div class="rotate-3"></div>
     <div class="scale-95"></div>
     <div class="skew-y-12 skew-x-12"></div>
