--- a/jit/tests/basic-usage.test.html
+++ b/jit/tests/basic-usage.test.html
@@ -109,7 +109,7 @@
     <div class="ring-opacity-40"></div>
     <div class="ring ring-4"></div>
     <div
-      class="filter filter-none blur-1 brightness-150 contrast-50 drop-shadow-md grayscale hue-rotate-60 invert saturate-200 sepia"
+      class="filter filter-none blur-md brightness-150 contrast-50 drop-shadow-md grayscale hue-rotate-60 invert saturate-200 sepia"
     ></div>
     <div class="rotate-3"></div>
     <div class="scale-95"></div>
