Add background-origin utilities

--- a/jit/tests/basic-usage.test.html
+++ b/jit/tests/basic-usage.test.html
@@ -19,6 +19,7 @@
     <div class="bg-clip-border"></div>
     <div class="bg-green-500"></div>
     <div class="bg-gradient-to-r"></div>
+    <div class="bg-origin-border bg-origin-padding bg-origin-content"></div>
     <div class="bg-opacity-20"></div>
     <div class="bg-top"></div>
     <div class="bg-no-repeat"></div>
