--- a/jit/tests/arbitrary-values.test.html
+++ b/jit/tests/arbitrary-values.test.html
@@ -12,6 +12,7 @@
     <div class="bg-[rgb(123,123,123)] bg-[rgba(123,123,123,0.5)]"></div>
     <div class="bg-[hsl(0,100%,50%)] bg-[hsla(0,100%,50%,0.3)]"></div>
     <div class="bg-opacity-[0.11]"></div>
+    <div class="bg-opacity-[var(--value)]"></div>
     <div class="border-[#f00]"></div>
     <div class="border-[2.5px]"></div>
     <div class="w-[3.23rem]"></div>
@@ -59,6 +60,13 @@
     <div class="mb-[7px]"></div>
     <div class="ml-[7px]"></div>
     <div class="mt-[clamp(30px,100px)]"></div>
+    <div class="rounded-[11px]"></div>
+    <div
+      class="rounded-t-[var(--radius)] rounded-r-[var(--radius)] rounded-b-[var(--radius)] rounded-l-[var(--radius)]"
+    ></div>
+    <div
+      class="rounded-tr-[var(--radius)] rounded-br-[var(--radius)] rounded-bl-[var(--radius)] rounded-tl-[var(--radius)]"
+    ></div>
     <div class="duration-[var(--app-duration)]"></div>
     <div class="p-[var(--app-padding)]"></div>
     <div class="inset-[11px]"></div>
@@ -79,5 +87,11 @@
     <div class="backdrop-opacity-[22%]"></div>
     <div class="backdrop-saturate-[144%]"></div>
     <div class="backdrop-sepia-[0.38]"></div>
+    <div class="from-[#da5b66] via-[#da5b66] to-[#da5b66]"></div>
+    <div class="from-[var(--color)] via-[var(--color)] to-[var(--color)]"></div>
+    <div class="fill-[#da5b66]"></div>
+    <div class="fill-[var(--color)]"></div>
+    <div class="stroke-[#da5b66]"></div>
+    <div class="leading-[var(--leading)]"></div>
   </body>
 </html>
