Add first-line, first-letter, and marker variants

--- a/tests/jit/variants.test.html
+++ b/tests/jit/variants.test.html
@@ -26,6 +26,11 @@
     <div class="read-only:shadow-md"></div>
 
     <!-- Pseudo-element variants -->
+    <div class="first-letter:text-red-500 first-letter:text-2xl"></div>
+    <div class="first-line:underline first-line:bg-yellow-300"></div>
+    <ul>
+      <li class="marker:text-red-500 marker:text-lg"></li>
+    </ul>
     <div class="before:block before:bg-red-500"></div>
     <div class="after:flex after:uppercase"></div>
 
