--- a/tests/jit/important-boolean.test.html
+++ b/tests/jit/important-boolean.test.html
@@ -5,6 +5,7 @@
 <div class="custom-component"></div>
 <div class="custom-important-component"></div>
 <div class="font-bold"></div>
+<div class="brightness-150 contrast-50"></div>
 <div class="md:hover:text-right"></div>
 <div class="motion-safe:hover:text-center"></div>
 <div class="dark:focus:text-left"></div>
