--- a/tests/jit/prefix.test.html
+++ b/tests/jit/prefix.test.html
@@ -10,6 +10,7 @@
 <div class="tw-custom-component-prefix"></div>
 <div class="custom-component-no-prefix"></div>
 <div class="tw-font-bold"></div>
+<div class="tw-brightness-150 tw-contrast-50"></div>
 <div class="md:hover:tw-text-right"></div>
 <div class="motion-safe:hover:tw-text-center"></div>
 <div class="dark:focus:tw-text-left"></div>
