--- a/tests/jit/important-modifier-prefix.test.html
+++ b/tests/jit/important-modifier-prefix.test.html
@@ -1,5 +1,6 @@
 <div class="!tw-container"></div>
 <div class="!tw-font-bold"></div>
+<div class="!tw-shadow-lg"></div>
 <div class="hover:!tw-text-center"></div>
 <div class="lg:!tw-opacity-50"></div>
 <div class="xl:focus:disabled:!tw-float-right"></div>
