--- a/tests/jit/arbitrary-values.test.html
+++ b/tests/jit/arbitrary-values.test.html
@@ -44,6 +44,10 @@
     <div class="col-[7]"></div>
     <div class="col-end-[7]"></div>
     <div class="col-start-[7]"></div>
+    <div class="col-[span,7,/,span,7]"></div>
+    <div class="col-[span,calc(9-2),/,span,calc(1+6)]"></div>
+    <div class="col-[span,var(--columns),/,span,var(--columns)]"></div>
+    <div class="col-[span,calc(var(--range-up)-var(--range-down)),/,span,3]"></div>
     <div class="flex-[var(--flex)]"></div>
     <div class="flex-grow-[var(--grow)]"></div>
     <div class="flex-shrink-[var(--shrink)]"></div>
