Support arbitrary values for `transitionProperty`
Transition property can be a great use case for the JIT arbitrary values blocks. As such, this commit makes that utility accept arbitrary values and apply those values to the `transition-property` property.

--- a/tests/jit/arbitrary-values.test.html
+++ b/tests/jit/arbitrary-values.test.html
@@ -53,6 +53,7 @@
     <div class="rotate-[23deg] rotate-[2.3rad] rotate-[401grad] rotate-[1.5turn]"></div>
     <div class="skew-x-[3px]"></div>
     <div class="skew-y-[3px]"></div>
+    <div class="transition-[left] transition-[width,height] transition-[color,opacity,height,left,width]"></div>
     <div class="text-[2.23rem]"></div>
     <div class="text-[length:var(--font-size)]"></div>
     <div class="text-[color:var(--color)]"></div>
