Fix arbitrary values in grid plugins

--- a/tests/jit/arbitrary-values.test.html
+++ b/tests/jit/arbitrary-values.test.html
@@ -41,9 +41,15 @@
     <div class="grid-cols-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
     <div class="lg:grid-cols-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
     <div class="grid-rows-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
+    <div class="auto-rows-[auto,min-content]"></div>
+    <div class="auto-rows-[minmax(100px,auto),minmax(max-content,2fr)]"></div>
+    <div class="auto-cols-[auto,min-content]"></div>
+    <div class="auto-cols-[minmax(100px,auto),minmax(max-content,2fr)]"></div>
     <div class="col-[7]"></div>
     <div class="col-end-[7]"></div>
+    <div class="col-end-[span,2]"></div>
     <div class="col-start-[7]"></div>
+    <div class="col-start-[span,2]"></div>
     <div class="col-[span,7,/,span,7]"></div>
     <div class="col-[span,calc(9-2),/,span,calc(1+6)]"></div>
     <div class="col-[span,var(--columns),/,span,var(--columns)]"></div>
@@ -52,8 +58,11 @@
     <div class="flex-grow-[var(--grow)]"></div>
     <div class="flex-shrink-[var(--shrink)]"></div>
     <div class="row-[7]"></div>
+    <div class="row-[span,7,/,span,7]"></div>
     <div class="row-end-[7]"></div>
+    <div class="row-end-[span,2]"></div>
     <div class="row-start-[7]"></div>
+    <div class="row-start-[span,2]"></div>
     <div class="rotate-[23deg] rotate-[2.3rad] rotate-[401grad] rotate-[1.5turn]"></div>
     <div class="skew-x-[3px]"></div>
     <div class="skew-y-[3px]"></div>
