ensure `modifySelectors` works when adding an additional class

--- a/tests/jit/modify-selectors.test.html
+++ b/tests/jit/modify-selectors.test.html
@@ -15,3 +15,8 @@
 <div class="lg:foo:disabled:markdown">
   <p>Lorem ipsum dolor sit amet...</p>
 </div>
+<div class="bar:font-bold"></div>
+<div class="sm:bar:font-bold"></div>
+<div class="bar:foo:markdown">
+  <p>Lorem ipsum dolor sit amet...</p>
+</div>
