--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -141,6 +141,7 @@
 
     <!-- Stacked group variants -->
     <div class="group-open:group-focus:bg-red-200"></div>
+    <div class="group-open:group-hover:space-x-2"></div>
     <div class="group-focus:group-hover:shadow-md"></div>
     <div class="group-disabled:group-focus:group-hover:shadow-md"></div>
     <div class="dark:group-disabled:group-focus:group-hover:shadow-md"></div>
