Add utilities for scrollbar-width

--- a/tests/raw-content.test.html
+++ b/tests/raw-content.test.html
@@ -97,6 +97,8 @@
     <div class="overflow-hidden"></div>
     <div class="overscroll-contain"></div>
     <div class="scroll-smooth"></div>
+    <div class="scrollbar-thin"></div>
+    <div class="scrollbar-none"></div>
     <div class="p-4 py-2 px-3 pt-1 pr-2 pb-3 pl-4"></div>
     <div class="place-content-start"></div>
     <div class="placeholder-green-300"></div>
