remove explicit textDecorationOpacity utility (the JIT slash syntax suffices)

--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -302,9 +302,7 @@
     <div class="decoration-[rgb(123,_123,_123)]"></div>
     <div class="decoration-[rgb(123_123_123)]"></div>
     <div class="decoration-[color:var(--color)]"></div>
-
-    <div class="decoration-opacity-[0.8]"></div>
-    <div class="decoration-opacity-[var(--value)]"></div>
+    <div class="decoration-[var(--color)]"></div>
 
     <div class="placeholder-[var(--placeholder)]"></div>
 
