--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -132,6 +132,8 @@
     <div class="list-['\1F44D']"></div>
     <div class="list-[var(--value)]"></div>
 
+    <div class="list-image-[url('/path-to-image.png')]"></div>
+
     <div class="columns-[20] columns-[var(--columns)]"></div>
 
     <div class="auto-cols-[minmax(10px,auto)]"></div>
