Add `text-decoration-style` utilities

--- a/tests/basic-usage.test.html
+++ b/tests/basic-usage.test.html
@@ -162,6 +162,7 @@
     <div class="text-opacity-10"></div>
     <div class="underline"></div>
     <div class="decoration-red-600"></div>
+    <div class="decoration-solid"></div>
     <div class="overflow-ellipsis truncate"></div>
     <div class="uppercase"></div>
     <div class="transform transform-gpu transform-none"></div>
