Add `text-emphasis-*` utilities

--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -305,6 +305,13 @@
     <div class="decoration-[color:var(--color)]"></div>
     <div class="decoration-[var(--color)]"></div>
 
+    <div class="emphasis-[black]"></div>
+    <div class="emphasis-[rgb(123,123,123)]"></div>
+    <div class="emphasis-[rgb(123,_123,_123)]"></div>
+    <div class="emphasis-[rgb(123_123_123)]"></div>
+    <div class="emphasis-[color:var(--color)]"></div>
+    <div class="emphasis-[var(--color)]"></div>
+
     <div class="placeholder-[var(--placeholder)]"></div>
 
     <div class="placeholder-opacity-[var(--placeholder-opacity)]"></div>
