--- a/tests/basic-usage.test.html
+++ b/tests/basic-usage.test.html
@@ -161,6 +161,9 @@
     <div class="text-opacity-10"></div>
     <div class="underline"></div>
     <div class="decoration-red-600"></div>
+    <div class="emphasis-filled"></div>
+    <div class="emphasis-red-600"></div>
+    <div class="emphasis-over"></div>
     <div class="overflow-ellipsis truncate"></div>
     <div class="uppercase"></div>
     <div class="transform transform-gpu transform-none"></div>
