--- a/tests/basic-usage.test.html
+++ b/tests/basic-usage.test.html
@@ -34,6 +34,7 @@
     <div class="shadow"></div>
     <div class="shadow-md"></div>
     <div class="shadow-lg"></div>
+    <div class="box-decoration-clone box-decoration-slice"></div>
     <div class="decoration-clone decoration-slice"></div>
     <div class="box-border"></div>
     <div class="clear-left"></div>
@@ -161,8 +162,13 @@
     <div class="text-indigo-500"></div>
     <div class="text-opacity-10"></div>
     <div class="underline"></div>
+    <div class="decoration-underline"></div>
     <div class="decoration-red-600"></div>
     <div class="decoration-solid"></div>
+	<div class="decoration"></div>
+	<div class="decoration-2"></div>
+	<div class="underline-offset-2"></div>
+	<div class="underline-right"></div>
     <div class="overflow-ellipsis truncate"></div>
     <div class="uppercase"></div>
     <div class="transform transform-gpu transform-none"></div>
