Add test for default underline offset

--- a/tests/basic-usage.test.html
+++ b/tests/basic-usage.test.html
@@ -167,6 +167,7 @@
     <div class="decoration-solid"></div>
 	<div class="decoration"></div>
 	<div class="decoration-2"></div>
+	<div class="underline-offset"></div>
 	<div class="underline-offset-2"></div>
 	<div class="underline-right"></div>
     <div class="overflow-ellipsis truncate"></div>
