--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -134,6 +134,10 @@
     <div class="lg:animate-spin"></div>
     <div class="hover:animate-spin"></div>
 
+    <!-- Orientation variants -->
+    <div class="orientation-portrait:bg-yellow-300"></div>
+    <div class="orientation-landscape:bg-yellow-300"></div>
+
     <!-- Stacked variants -->
     <div class="open:hover:bg-red-200"></div>
     <div class="file:hover:bg-blue-600"></div>
