Add children variant

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -50,6 +50,13 @@
     <div class="before:block before:bg-red-500"></div>
     <div class="after:flex after:uppercase"></div>
 
+    <!-- Children variants -->
+    <div class="children:bg-red-100"></div>
+    <div class="hover:children:bg-red-500"></div>
+    <div class="hover:children:text-red-100"></div>
+    <div class="children:snap-start"></div>
+    <div class="children:snap-always"></div>
+
     <!-- Group variants -->
     <div class="group-open:bg-red-200"></div>
     <div class="group-first:shadow-md"></div>
