Rename to portrait and landscape

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -135,8 +135,8 @@
     <div class="hover:animate-spin"></div>
 
     <!-- Orientation variants -->
-    <div class="orientation-portrait:bg-yellow-300"></div>
-    <div class="orientation-landscape:bg-yellow-300"></div>
+    <div class="portrait:bg-yellow-300"></div>
+    <div class="landscape:bg-yellow-300"></div>
 
     <!-- Stacked variants -->
     <div class="open:hover:bg-red-200"></div>
