--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -130,7 +130,8 @@
     <div class="cursor-[var(--value)]"></div>
 
     <div class="list-['\1F44D']"></div>
-    <div class="list-[var(--value)]"></div>
+    <div class="list-[string:var(--value)]"></div>
+    <div class="list-[url('/path-to-image.png')]"></div>
 
     <div class="columns-[20] columns-[var(--columns)]"></div>
 
