--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -60,6 +60,7 @@
     <div class="min-h-[calc(100%+1rem)]"></div>
     <div class="min-h-[var(--height)]"></div>
 
+    <div class="w-[0]"></div>
     <div class="w-[3.23rem]"></div>
     <div class="w-[calc(100%+1rem)]"></div>
     <div class="w-[calc(var(--10-10px,calc(-20px-(-30px--40px)))-50px)]"></div>
