ensure that `min`, `max` and `clamp` also work with arbitrary values

--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -281,6 +281,7 @@
     <div class="text-[2.23rem]"></div>
     <div class="text-[length:var(--font-size)]"></div>
     <div class="text-[angle:var(--angle)]"></div>
+    <div class="text-[min(10vh,100px)]"></div>
 
     <div class="font-[300]"></div>
     <div class="font-[number:lighter]"></div>
