Add margin, padding and inset safe area utilities

--- a/tests/raw-content.test.html
+++ b/tests/raw-content.test.html
@@ -143,5 +143,14 @@
     <div class="w-12"></div>
     <div class="break-words"></div>
     <div class="z-30"></div>
+    <div class="m-safe"></div>
+    <div class="mx-safe my-safe"></div>
+    <div class="ml-safe mr-safe mt-safe mb-safe"></div>
+    <div class="p-safe"></div>
+    <div class="px-safe py-safe"></div>
+    <div class="pl-safe pr-safe pt-safe pb-safe"></div>
+    <div class="inset-safe"></div>
+    <div class="inset-x-safe inset-y-safe"></div>
+    <div class="left-safe right-safe top-safe bottom-safe"></div>
   </body>
 </html>
