--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -424,5 +424,7 @@
     <!-- INVALID -->
     <div class="w-[[(])]"></div>
     <!-- INVALID -->
+    <div>["text-[10px]", "lg:text-[14px]"]</div>
+    <!-- VALID -->
   </body>
 </html>
