Add home page hero dark mode styles

--- a/src/samples/hero.html
+++ b/src/samples/hero.html
@@ -1,4 +1,4 @@
-<figure class="md:flex bg-gray-100 rounded-xl p-8 md:p-0">
+<figure class="md:flex bg-gray-100 rounded-xl p-8 md:p-0 dark:bg-gray-800">
   <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="/sarah-dayan.jpg" alt="" width="384" height="512">
   <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
     <blockquote>
@@ -9,10 +9,10 @@
       </p>
     </blockquote>
     <figcaption class="font-medium">
-      <div class="text-sky-500">
+      <div class="text-sky-500 dark:text-sky-400">
         Sarah Dayan
       </div>
-      <div class="text-gray-700">
+      <div class="text-gray-700 dark:text-gray-500">
         Staff Engineer, Algolia
       </div>
     </figcaption>
