--- a/src/samples/dark-mode.html
+++ b/src/samples/dark-mode.html
@@ -30,38 +30,38 @@
 </div>
 <div class="(light)bg-gray-50 (light)text-gray-500 demo-dark:bg-gray-600 demo-dark:text-gray-200 rounded-b-xl flex items-center">
   <div class="flex-auto flex items-center justify-evenly">
-    <button type="button">
+    <button type="button" aria-label="Add to favorites">
       <svg width="24" height="24">
         <path d="M7 6.931C7 5.865 7.853 5 8.905 5h6.19C16.147 5 17 5.865 17 6.931V19l-5-4-5 4V6.931Z" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
-    <button type="button" class="hidden sm:block lg:hidden xl:block">
+    <button type="button" class="hidden sm:block lg:hidden xl:block" aria-label="Previous">
       <svg width="24" height="24" fill="none">
         <path d="m10 12 8-6v12l-8-6Z" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         <path d="M6 6v12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
-    <button type="button">
+    <button type="button" aria-label="Rewind 10 seconds">
       <svg width="24" height="24" fill="none">
         <path d="M6.492 16.95c2.861 2.733 7.5 2.733 10.362 0 2.861-2.734 2.861-7.166 0-9.9-2.862-2.733-7.501-2.733-10.362 0A7.096 7.096 0 0 0 5.5 8.226" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         <path d="M5 5v3.111c0 .491.398.889.889.889H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
   </div>
-  <button type="button" class="(light)bg-white (light)text-gray-900 demo-dark:bg-gray-100 demo-dark:text-gray-700 flex-none -my-2 mx-auto w-20 h-20 rounded-full ring-1 ring-gray-900/5 shadow-md flex items-center justify-center">
+  <button type="button" class="(light)bg-white (light)text-gray-900 demo-dark:bg-gray-100 demo-dark:text-gray-700 flex-none -my-2 mx-auto w-20 h-20 rounded-full ring-1 ring-gray-900/5 shadow-md flex items-center justify-center" aria-label="Pause">
     <svg width="30" height="32" fill="currentColor">
       <rect x="6" y="4" width="4" height="24" rx="2" />
       <rect x="20" y="4" width="4" height="24" rx="2" />
     </svg>
   </button>
   <div class="flex-auto flex items-center justify-evenly">
-    <button type="button">
+    <button type="button" aria-label="Skip 10 seconds">
       <svg width="24" height="24" fill="none">
         <path d="M17.509 16.95c-2.862 2.733-7.501 2.733-10.363 0-2.861-2.734-2.861-7.166 0-9.9 2.862-2.733 7.501-2.733 10.363 0 .38.365.711.759.991 1.176" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         <path d="M19 5v3.111c0 .491-.398.889-.889.889H15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
-    <button type="button" class="hidden sm:block lg:hidden xl:block">
+    <button type="button" class="hidden sm:block lg:hidden xl:block" aria-label="Next">
       <svg width="24" height="24" fill="none">
         <path d="M14 12 6 6v12l8-6Z" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         <path d="M18 6v12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
