--- a/tests/raw-content.test.html
+++ b/tests/raw-content.test.html
@@ -143,5 +143,8 @@
     <div class="w-12"></div>
     <div class="break-words"></div>
     <div class="z-30"></div>
+    <div class="rendering-auto"></div>
+    <div class="rendering-crisp-edges"></div>
+    <div class="rendering-pixelated"></div>
   </body>
 </html>
