Add CSS contain utilities

--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -365,6 +365,8 @@
     <div class="backdrop-saturate-[144%]"></div>
     <div class="backdrop-sepia-[0.38]"></div>
 
+    <div class="contain-[style_layout_paint]"></div>
+
     <div class="transition-[opacity,width]"></div>
 
     <div class="delay-[var(--delay)]"></div>
