--- a/tests/raw-content.test.html
+++ b/tests/raw-content.test.html
@@ -143,5 +143,7 @@
     <div class="w-12"></div>
     <div class="break-words"></div>
     <div class="z-30"></div>
+    <div class="contain-size"></div>
+    <div class="contain-content"></div>
   </body>
 </html>
