add 'not-' variants for all pseudo-class variants (and include many tests)

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -39,7 +39,38 @@
     <div class="out-of-range:shadow-md"></div>
     <div class="read-only:shadow-md"></div>
     <div class="empty:shadow-md"></div>
-    <dialog class="backdrop:shadow-md"></dialog>
+
+    <!-- Negated basic pseudo variants -->
+    <div class="not-first:shadow-md"></div>
+    <div class="not-last:shadow-md"></div>
+    <div class="not-only:shadow-md"></div>
+    <div class="not-even:shadow-md"></div>
+    <div class="not-odd:shadow-md"></div>
+    <div class="not-first-of-type:shadow-md"></div>
+    <div class="not-last-of-type:shadow-md"></div>
+    <div class="not-only-of-type:shadow-md"></div>
+    <div class="not-hover:shadow-md"></div>
+    <div class="not-focus:shadow-md"></div>
+    <div class="not-enabled:shadow-md"></div>
+    <div class="not-disabled:shadow-md"></div>
+    <div class="not-active:shadow-md"></div>
+    <div class="not-target:shadow-md"></div>
+    <div class="not-open:bg-red-200"></div>
+    <div class="not-visited:shadow-md"></div>
+    <div class="not-default:shadow-md"></div>
+    <div class="not-checked:shadow-md"></div>
+    <div class="not-indeterminate:shadow-md"></div>
+    <div class="not-placeholder-shown:shadow-md"></div>
+    <div class="not-autofill:shadow-md"></div>
+    <div class="not-focus-within:shadow-md"></div>
+    <div class="not-focus-visible:shadow-md"></div>
+    <div class="not-required:shadow-md"></div>
+    <div class="not-valid:shadow-md"></div>
+    <div class="not-invalid:shadow-md"></div>
+    <div class="not-in-range:shadow-md"></div>
+    <div class="not-out-of-range:shadow-md"></div>
+    <div class="not-read-only:shadow-md"></div>
+    <div class="not-empty:shadow-md"></div>
 
     <!-- Pseudo-element variants -->
     <div class="first-letter:text-2xl first-letter:text-red-500"></div>
@@ -52,6 +83,7 @@
     <div class="before:block before:bg-red-500"></div>
     <div class="after:flex after:uppercase"></div>
     <div class="placeholder:font-bold placeholder:text-red-500"></div>
+    <dialog class="backdrop:shadow-md"></dialog>
 
     <!-- Group variants -->
     <div class="group-open:bg-red-200"></div>
@@ -85,7 +117,40 @@
     <div class="group-read-only:shadow-md"></div>
     <div class="group-empty:shadow-md"></div>
 
+    <!-- Negated group variants -->
+    <div class="group-not-open:bg-red-200"></div>
+    <div class="group-not-first:shadow-md"></div>
+    <div class="group-not-last:shadow-md"></div>
+    <div class="group-not-only:shadow-md"></div>
+    <div class="group-not-even:shadow-md"></div>
+    <div class="group-not-odd:shadow-md"></div>
+    <div class="group-not-first-of-type:shadow-md"></div>
+    <div class="group-not-last-of-type:shadow-md"></div>
+    <div class="group-not-only-of-type:shadow-md"></div>
+    <div class="group-not-hover:shadow-md"></div>
+    <div class="group-not-focus:shadow-md"></div>
+    <div class="group-not-enabled:shadow-md"></div>
+    <div class="group-not-disabled:shadow-md"></div>
+    <div class="group-not-active:shadow-md"></div>
+    <div class="group-not-target:shadow-md"></div>
+    <div class="group-not-visited:shadow-md"></div>
+    <div class="group-not-default:shadow-md"></div>
+    <div class="group-not-checked:shadow-md"></div>
+    <div class="group-not-indeterminate:shadow-md"></div>
+    <div class="group-not-placeholder-shown:shadow-md"></div>
+    <div class="group-not-autofill:shadow-md"></div>
+    <div class="group-not-focus-within:shadow-md"></div>
+    <div class="group-not-focus-visible:shadow-md"></div>
+    <div class="group-not-required:shadow-md"></div>
+    <div class="group-not-valid:shadow-md"></div>
+    <div class="group-not-invalid:shadow-md"></div>
+    <div class="group-not-in-range:shadow-md"></div>
+    <div class="group-not-out-of-range:shadow-md"></div>
+    <div class="group-not-read-only:shadow-md"></div>
+    <div class="group-not-empty:shadow-md"></div>
+
     <!-- Peer variants -->
+    <div class="peer-open:bg-red-200"></div>
     <div class="peer-first:shadow-md"></div>
     <div class="peer-last:shadow-md"></div>
     <div class="peer-only:shadow-md"></div>
@@ -115,6 +180,38 @@
     <div class="peer-out-of-range:shadow-md"></div>
     <div class="peer-read-only:shadow-md"></div>
     <div class="peer-empty:shadow-md"></div>
+
+    <!-- Negated peer variants -->
+    <div class="peer-not-open:bg-red-200"></div>
+    <div class="peer-not-first:shadow-md"></div>
+    <div class="peer-not-last:shadow-md"></div>
+    <div class="peer-not-only:shadow-md"></div>
+    <div class="peer-not-even:shadow-md"></div>
+    <div class="peer-not-odd:shadow-md"></div>
+    <div class="peer-not-first-of-type:shadow-md"></div>
+    <div class="peer-not-last-of-type:shadow-md"></div>
+    <div class="peer-not-only-of-type:shadow-md"></div>
+    <div class="peer-not-hover:shadow-md"></div>
+    <div class="peer-not-focus:shadow-md"></div>
+    <div class="peer-not-enabled:shadow-md"></div>
+    <div class="peer-not-disabled:shadow-md"></div>
+    <div class="peer-not-active:shadow-md"></div>
+    <div class="peer-not-target:shadow-md"></div>
+    <div class="peer-not-visited:shadow-md"></div>
+    <div class="peer-not-default:shadow-md"></div>
+    <div class="peer-not-checked:shadow-md"></div>
+    <div class="peer-not-indeterminate:shadow-md"></div>
+    <div class="peer-not-placeholder-shown:shadow-md"></div>
+    <div class="peer-not-autofill:shadow-md"></div>
+    <div class="peer-not-focus-within:shadow-md"></div>
+    <div class="peer-not-focus-visible:shadow-md"></div>
+    <div class="peer-not-required:shadow-md"></div>
+    <div class="peer-not-valid:shadow-md"></div>
+    <div class="peer-not-invalid:shadow-md"></div>
+    <div class="peer-not-in-range:shadow-md"></div>
+    <div class="peer-not-out-of-range:shadow-md"></div>
+    <div class="peer-not-read-only:shadow-md"></div>
+    <div class="peer-not-empty:shadow-md"></div>
 
     <!-- Reduced motion variants -->
     <div class="motion-safe:shadow-md"></div>
@@ -147,24 +244,38 @@
     <div class="open:hover:bg-red-200"></div>
     <div class="file:hover:bg-blue-600"></div>
     <div class="focus:hover:shadow-md"></div>
+    <div class="focus:not-hover:shadow-md"></div>
     <div class="sm:active:shadow-md"></div>
+    <div class="sm:not-active:shadow-md"></div>
     <div class="md:group-focus:shadow-md"></div>
+    <div class="md:group-not-focus:shadow-md"></div>
     <div class="lg:dark:shadow-md"></div>
-    <div class="xl:dark:disabledshadow-md"></div>
+    <div class="xl:dark:disabled:shadow-md"></div>
+    <div class="xl:dark:not-disabled:shadow-md"></div>
     <div class="2xl:dark:motion-safe:focus-within:shadow-md"></div>
+    <div class="2xl:dark:motion-safe:not-focus-within:shadow-md"></div>
 
     <!-- Stacked group variants -->
     <div class="group-open:group-focus:bg-red-200"></div>
+    <div class="group-not-open:group-focus:bg-red-200"></div>
     <div class="group-open:group-hover:space-x-2"></div>
+    <div class="group-not-open:group-not-hover:space-x-2"></div>
     <div class="group-focus:group-hover:shadow-md"></div>
+    <div class="group-focus:group-not-hover:shadow-md"></div>
     <div class="group-disabled:group-focus:group-hover:shadow-md"></div>
+    <div class="group-not-disabled:group-focus:group-not-hover:shadow-md"></div>
     <div class="dark:group-disabled:group-focus:group-hover:shadow-md"></div>
     <div class="group-disabled:group-focus:group-hover:first:shadow-md"></div>
+    <div class="group-not-disabled:group-focus:group-hover:not-first:shadow-md"></div>
 
     <!-- Stacked peer variants -->
     <div class="peer-focus:peer-hover:shadow-md"></div>
+    <div class="peer-focus:peer-not-hover:shadow-md"></div>
+    <div class="peer-not-focus:peer-hover:shadow-md"></div>
+    <div class="peer-not-focus:peer-not-hover:shadow-md"></div>
     <div class="peer-disabled:peer-focus:peer-hover:shadow-md"></div>
     <div class="dark:peer-disabled:peer-focus:peer-hover:shadow-md"></div>
+    <div class="dark:peer-disabled:peer-not-focus:peer-not-hover:shadow-md"></div>
     <div class="peer-disabled:peer-focus:peer-hover:first:shadow-md"></div>
   </body>
 </html>
