Use variables for gap

--- a/tests/basic-usage.test.html
+++ b/tests/basic-usage.test.html
@@ -76,6 +76,7 @@
     <div class="row-start-3"></div>
     <div class="row-end-5"></div>
     <div class="grid-cols-4"></div>
+    <div class="grid-cols-fit-4"></div>
     <div class="grid-rows-3"></div>
     <div class="h-16"></div>
     <div class="inset-0 inset-y-4 inset-x-2 top-6 right-8 bottom-12 left-16"></div>
