Improve homepage performance by lazy loading images (#1260)
* Lazy loaded below the fold images + updated code samples with loading=lazy attribute

* changed to load the value via the theme data

* Update Steps.js

Co-authored-by: Gabriel Nechita <gabriel.nechita@toptal.com>
Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/samples/build-anything.html
+++ b/src/samples/build-anything.html
@@ -1,6 +1,6 @@
 <div class="_">
   <div class="_">
-    <img src="__content__" alt="" class="_" />
+    <img src="__content__" alt="" class="_" loading="lazy" />
   </div>
   <form class="_">
     <div class="_">
