--- a/src/samples/editor-tools.html
+++ b/src/samples/editor-tools.html
@@ -6,7 +6,7 @@
     </div>
     <p class="mt-1 text-slate-500 text-sm truncate">Regional Paradigm Technician</p>
   </div>
-  <img class="w-10 h-10 bg-slate-300 rounded-full shrink-0" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="">
+  <img class="w-10 h-10 bg-slate-300 rounded-full shrink-0" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=4&amp;w=256&amp;h=256&amp;q=60" alt="" loading="lazy">
 </div>
 <div class="border-t border-slate-200">
   <div class="-mt-px flex">
