add not-optional tests

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -65,6 +65,7 @@
     <div class="not-autofill:shadow-md"></div>
     <div class="not-focus-within:shadow-md"></div>
     <div class="not-focus-visible:shadow-md"></div>
+    <div class="not-optional:shadow-md"></div>
     <div class="not-required:shadow-md"></div>
     <div class="not-valid:shadow-md"></div>
     <div class="not-invalid:shadow-md"></div>
@@ -143,6 +144,7 @@
     <div class="group-not-autofill:shadow-md"></div>
     <div class="group-not-focus-within:shadow-md"></div>
     <div class="group-not-focus-visible:shadow-md"></div>
+    <div class="group-not-optional:shadow-md"></div>
     <div class="group-not-required:shadow-md"></div>
     <div class="group-not-valid:shadow-md"></div>
     <div class="group-not-invalid:shadow-md"></div>
@@ -208,6 +210,7 @@
     <div class="peer-not-autofill:shadow-md"></div>
     <div class="peer-not-focus-within:shadow-md"></div>
     <div class="peer-not-focus-visible:shadow-md"></div>
+    <div class="peer-not-optional:shadow-md"></div>
     <div class="peer-not-required:shadow-md"></div>
     <div class="peer-not-valid:shadow-md"></div>
     <div class="peer-not-invalid:shadow-md"></div>
