Wrote some tests

--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -142,7 +142,13 @@
     <div class="grid-cols-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
     <div class="lg:grid-cols-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
 
+    <div class="grid-cols-fill-[200px]"></div>
+    <div class="grid-cols-fit-[200px]"></div>
+
     <div class="grid-rows-[200px,repeat(auto-fill,minmax(15%,100px)),300px]"></div>
+
+    <div class="grid-rows-fill-[200px]"></div>
+    <div class="grid-rows-fit-[200px]"></div>
 
     <div class="gap-[20px]"></div>
     <div class="gap-[var(--value)]"></div>
