Add touch variants

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -150,6 +150,9 @@
     <div class="contrast-more:bg-yellow-300"></div>
     <div class="contrast-less:bg-yellow-300"></div>
 
+    <div class="touch:bg-yellow-300"></div>
+    <div class="no-touch:bg-yellow-300"></div>
+
     <!-- Stacked variants -->
     <div class="open:hover:bg-red-200"></div>
     <div class="file:hover:bg-blue-600"></div>
