--- a/tests/arbitrary-values.test.html
+++ b/tests/arbitrary-values.test.html
@@ -69,6 +69,7 @@
     <div class="w-[calc(100%/3-1rem*2)]"></div>
     <div class="min-w-[calc(1-var(--something)*0.5)]"></div>
     <div class="min-w-[calc(1-(var(--something)*0.5))]"></div>
+    <div class="min-w-[calc(1-((12-3)*0.5))]"></div>
 
     <div class="min-w-[3.23rem]"></div>
     <div class="min-w-[calc(100%+1rem)]"></div>
