--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -121,6 +121,9 @@
 <!-- Dark mode variants -->
 <div class="dark:flex"></div>
 
+<!-- Forced colors variant -->
+<div class="forced-colors:flex"></div>
+
 <!-- Print variant -->
 <div class="print:flex"></div>
 
