Add `:popover-open` variant

--- a/tests/variants.test.html
+++ b/tests/variants.test.html
@@ -14,6 +14,7 @@
 <div class="active:shadow-md"></div>
 <div class="target:shadow-md"></div>
 <div class="open:bg-red-200"></div>
+<div class="popover-open:bg-red-200"></div>
 <div class="visited:shadow-md"></div>
 <div class="default:shadow-md"></div>
 <div class="checked:shadow-md"></div>
@@ -46,6 +47,7 @@
 
 <!-- Group variants -->
 <div class="group-open:bg-red-200"></div>
+<div class="group-popover-open:bg-red-200"></div>
 <div class="group-first:shadow-md"></div>
 <div class="group-last:shadow-md"></div>
 <div class="group-only:shadow-md"></div>
@@ -79,6 +81,7 @@
 
 <!-- Peer variants -->
 <div class="peer-open:bg-red-200"></div>
+<div class="peer-popover-open:bg-red-200"></div>
 <div class="peer-first:shadow-md"></div>
 <div class="peer-last:shadow-md"></div>
 <div class="peer-only:shadow-md"></div>
@@ -146,6 +149,7 @@
 
 <!-- Stacked variants -->
 <div class="open:hover:bg-red-200"></div>
+<div class="popover-open:hover:bg-red-200"></div>
 <div class="file:hover:bg-blue-600"></div>
 <div class="focus:hover:shadow-md"></div>
 <div class="sm:active:shadow-md"></div>
